--- a/dashboard.css
+++ b/dashboard.css
@@ -2,9 +2,9 @@
     margin: 0;
     padding: 0;
 }
-.container{
+.contain{
     background:  linear-gradient(180deg, #FFFFFF 0%, #4d6270 83.85%);
-    height: 800px;
+    min-height:100vh;
 }
 h2{
     font-family:'Roboto', sans-serif;
@@ -13,26 +13,23 @@ h2{
     line-height: 28px;
     padding-bottom: 10px;
 }
-.headingtext{
-    margin-top: 50px;
-}
+
 .headingtext h3{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20px;
     font-weight: 500;
-    padding: 10px 0px;
 }
-.headerimage{
-    position: absolute;
-    left: 28.5rem;
-    top: 45px;
+.headerimage > div {
+    position:relative;
+    width:fit-content;
 }
 .circle{
-    position: relative;
+    position: absolute;
+    float:right;
+    right:0;
+    bottom:0;
     padding: 5px;
     border-radius: 50%;
-    left: 4.2rem;
-    bottom: 15px;
     width: 5px;
     height: 5px;
     background-color: rgb(33, 161, 33);
@@ -43,6 +40,10 @@ h2{
     width: 50px;
     
 }
+.image img{
+    width:100%;
+}
+
 .image p{
     font-size: 14px;
     font-weight: 540;
