--- a/homepage.css
+++ b/homepage.css
@@ -4,29 +4,34 @@
 }
 img{
     align-items: center;
-    height: 120%;
-    width: 100%;
+    height: 100%;
+    max-width: 100%;
     border-radius: 0px 0px 10px 10px;
 }
 .image{
     width: 100%;
-    height: 300px;
+    height:60vh;
+    background-image:url('images/news.png');
+    background-size:cover;
+    background-position:center center;
+    border-radius: 0px 0px 10px 10px;
 }
+
 header{
     padding: 5px;
 }
+
 h1{
-    padding-top: 60px;
     font-weight: 700;
     text-align: center;
     margin: 0;
     padding-left: 10px;
     padding-right: 10px;
-    font-size: 25px;
+    font-size: 32px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h2{
-    font-size: 20px;
+    font-size: 24px;
     padding: 10px;
     font-weight: 600;
     line-height: 23px;
@@ -34,57 +39,65 @@ h2{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 p.first{
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 500;
     line-height: 17px;
     padding: 20px;
     text-align: auto;
    
 }
-.readnews{
-    border-radius: 10px;
-    padding: 8px 35px;
-    background-color: #233B4C;
-    display: inline-block;
-    position: relative;
-    left: 8%;
-}
 
-.postnews{
-    border-radius: 10px;
-    padding: 8px 35px;
-    background-color: #233B4C;
-    display: inline-block;
-    position: relative;
-    left: 18%;
-}
 a{
+    text-decoration:none;
     color: white;
     padding: 5px;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.readnews{
+    font-size:18px;
+    border-radius: 10px;
+    padding: 16px 35px;
+    border:2px solid #233B4C;
+    display: inline-block;
+    color: #233B4C;
+    box-sizing:border-box;
+}
+.readnews:hover{
+    text-decoration:none;
+}
+
+.postnews{
+    font-size:18px;
+    border-radius: 10px;
+    padding: 16px 35px;
+    background-color: #233B4C;
+    border:2px solid #233B4C;
+    display: inline-block;
+}
+.postnews:hover{
+    text-decoration:none;
+}
+
 .body{
     padding: 0px;
 }
-section{
-    padding: 45px;
-}
+
 .article1{
     border-radius: 10px;
     border: 1px solid rgb(180, 173, 173);
-    margin-top: 10px;
-    margin-bottom: 20px;
 }
 .row1{
     padding: 10px;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 500;
    
 }
 
 .image1{
     height: 150px;
+    width:fit-content;
 }
 
 .col2{
@@ -93,7 +106,7 @@ section{
 
 .image1 img{
     height: 100% ;
-    width: 100%;
+    width: auto;
     border-radius: 10px;
 }
 
@@ -107,7 +120,6 @@ section{
     border-radius: 10px;
     border: 2px inset black;
     padding: 10px;
-    margin-top: 30px;
 }
 .article4{
     border-radius: 10px;
@@ -119,10 +131,49 @@ section{
     border-radius: 10px;
     border: 2px inset black;
     padding: 10px;
-    margin-top: 30px;
 }
 
 .row:visited{
     color: blue;
 
+}
+
+@media (min-width:768px) and (max-width:1200px){
+    .image1 img{
+        height: auto;
+        width: auto;
+        border-radius: 10px;
+    }
+    .image1{
+        height: auto;
+        width:fit-content;
+    }  
+}
+
+@media screen and (max-width:576px){
+
+
+    .image1 img{
+        height: auto;
+        width: auto;
+        border-radius: 10px;
+    }
+    .image1{
+        height: auto;
+        width:fit-content;
+    }
+    .image{
+        height:30vh;
+    }
+}
+
+@media screen and (max-width:430px){
+    .postnews{
+        width:100%;
+
+    }
+    .readnews{
+        width:100%;
+        margin-bottom:8px;
+    }
 }
