--- a/imageedit.css
+++ b/imageedit.css
@@ -4,14 +4,17 @@
 }
 .banner{
     background-image: linear-gradient(167.91deg, rgba(35, 59, 76, 0.9) -1.02%, rgba(255, 255, 255, 0.9) 104.5%);
-    height: 900px;
+    min-height: 100vh;
     padding: 0px;
 
 }
-.container{
+.contain{
     padding: 0px;
+    min-height:100vh;
 }
 .contaislidener{
+    width:100%;
+    height:fit-content;
     margin-top: 20px;
 }
 
@@ -28,27 +31,22 @@
     padding: 2.5px;
     border-radius: 20px;
     border: 2px solid rgb(99, 88, 88);
-    width: 330px;
+    width: 100%;
     margin-left: 30px;
 }
 .slidertext{
-    padding: 10px 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-    
+    width:80%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
 .text1{
     font-weight: 700;
     font-size: 15px;
-    padding-left: 20px;
-
 }
 .text2{
     float: right;
     margin-top: -30px;
     font-weight: 700;
     font-size: 15px;
-    padding-right: 60px;
 }
 .addimage{
     text-align: center;
@@ -56,65 +54,62 @@
     border-radius: 10px;
     padding: 10px 32px;
     display: inline-block;
-    margin-left: 55%;
-    margin-top:7px;
 }
 .addimage a{
     color: white;
+    text-decoration:none;
     font-size: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .image{
-    width: 420px;
-    height: 300px;
-    padding: 10px;
+    width: 100%;
+    height: auto;
     
 }
 img{
-    height: 100%;
-    padding: 10px;
+    height: auto;
     width: 100%;
-    margin-top: 20px;
 }
 .form{
-    padding: 10px 30px;
+    width:100%;
     
+}
+.input{
+    width:100%;
 }
 .title{
-    
-    padding: 5px;
     border-radius:5px ;
-    width: 250px;
-    height: 45px;
+    width: 100%;
+    font-size:15px;
     border: 2px solid black;
     background-color: transparent;
-    padding-left: 50px;
-    margin-left: 15px;
 }
 h2{
-    padding: 5px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 15px;
 }
 .Date{
    
-    padding: 5px;
     border-radius:5px ;
-    width: 250px;
-    height: 45px;
+    width: 100%;
+    font-size:15px;
     border: 2px solid black;
     background-color: transparent;
-    padding-left: 50px;
-    margin-left: 15px;
 }
 .Description{
-   
-    padding: 20px;
-    border-radius:5px ;
-    width: 250px;
+    border-radius:5px;
+    width: 100%;
     height: 70px;
+    font-size:15px;
     border: 2px solid black;
     background-color: transparent;
-    margin-left: 60px;
-    margin-top: 10px;
+}
+
+@media screen and (max-width: 368px){
+    .text1, .text2{
+        font-size:10px;
+    }
+    .addimage{
+        width:100%;
+    }
 }
