--- a/loading.css
+++ b/loading.css
@@ -4,18 +4,29 @@
 }
 .banner{
     background-image:linear-gradient(180deg, rgba(87, 115, 134, 0.9) 0%, rgba(250, 250, 250, 0.699) 100%);
-    height: 900px;
+    min-height:100vh;
     padding: 0px;
+}
+img{
+    width:50%;
+}
+.image img{
+    width:100%;
+    height:auto;
 }
 .image{
     position: relative;
-    top: 25%;
-    left: 10%;
+    width:fit-content;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+    width:25%;
 }
 .image1{
     position: absolute;
-    top: 12%;
-    left: 8%;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
     z-index: 3;
 
 }
@@ -24,4 +35,9 @@
     background-color: red;
 
 }
-   
+
+@media screen and (max-width:768px){
+    .image{
+        width:50%;
+    }
+}
