--- a/rejected.css
+++ b/rejected.css
@@ -4,7 +4,8 @@
 }
 .banner{
     background-image:linear-gradient(180deg, rgba(87, 115, 134, 0.9) 0%, rgba(250, 250, 250, 0.699) 100%);
-    height: 900px;
+    width:100%;
+    max-height: 100vh;
     padding: 0px;
 }
 .image{
