--- a/sign.css
+++ b/sign.css
@@ -5,15 +5,14 @@
 
 .banner{
     width: 100%;
-    height: 320px;
-}
-
-img{
-    align-items: center;
-    height: 120%;
-    width: 100%;
+    height: 50vh;
+    background-image:url('images/news.png');
+    background-size:cover;
+    background-position: center center;
     border-radius: 0px 0px 10px 10px;
 }
+
+
 
 .img-cont{
     padding: 0px;
@@ -27,14 +26,11 @@ h2{
     margin-top: 80px;
     font-size: 15pt;
 }
-.form{
-    padding: 20px 40PX;
-    align-items: center;
-}
+
 .email{
     padding: 5px 10px;
     border-radius: 5px;
-    font-size: 10pt;
+    font-size: 18px;
     width: 100%;
     padding-left: 35px;
     background-image: url('./images/email.svg');
@@ -46,7 +42,7 @@ h2{
 .pass{
     padding: 5px 10px;
     border-radius: 5px;
-    font-size: 10pt;
+    font-size: 18px;
     width: 100%;
     margin-top: -10px;
     padding-left: 35px;
@@ -64,28 +60,30 @@ h2{
     border-radius: 10px;
     align-items: center;
     display: inline-block;
-    margin-left: 35%;
-    margin-top:-20px;
-    margin-bottom: 20px;
+    font-size: 18px;
+    text-transform:capitalize;
 }
 a{
     color: white;
     text-align: center;
-    font-size: 14px;
+    font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration:none;
 }
 h4{
     text-align: center;
-    font-size: 14px;
+    text-transform:capitalize;
+    font-size: 28px;
     margin: 0;
     
 }
 h3{
     text-align: center;
+    text-transform:capitalize;
+    font-weight:500;
     color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 10px;
-    font-size: 16px;
+    font-size: 32px;
     font-weight: 600;
 }
 .icons{ 
@@ -121,4 +119,29 @@ h3{
     width: 100%;
     height: 100%;
 }
+.facebook{
+    width:25%;
+    height:auto;
+    outline:2px solid rgb(129, 126, 126);
+}
 
+@media screen and (max-width:768px){
+    .facebook{
+        width:40%;
+    }
+}
+@media screen and (max-width:576px){
+    h3{
+        font-size:24px;
+    }
+    h3{
+        font-size:18px;
+    }
+    .banner{
+        height: 30vh;
+        background-image:url('images/news.png');
+        background-size:cover;
+        background-position: center center;
+        border-radius: 0px 0px 10px 10px;
+    }
+}
