--- a/signup.css
+++ b/signup.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
 }
-img{
-    align-items: center;
-    height: 120%;
+.banner{
     width: 100%;
+    height: 50vh;
+    background-image:url('images/news.png');
+    background-size:cover;
+    background-position: center center;
     border-radius: 0px 0px 10px 10px;
 }
 .image{
@@ -22,10 +24,6 @@ h2{
     color: rgb(12, 12, 12);
     margin-top: 80px;
     font-size: 15pt;
-}
-.form{
-        padding: 10px 40PX;
-           align-items: center;
 }
 .email{
     padding: 7px 12px;
@@ -44,7 +42,6 @@ h2{
     border-radius: 5px;
     font-size: 10pt;
     width: 100%;
-    margin-top: -10px;
     padding-left: 35px;
     background-image: url('./images/lock.svg');
     background-position-x: 10px;
@@ -63,34 +60,43 @@ h2{
     background-position-y: center;
     background-repeat: no-repeat;
     background-size: 18px;
-    margin-top: -10px;
+    
 }
 
 .Register{
+    width:100%;
     text-align: center;
     background-color: #233B4C;
     padding: 12px 39px;
     border-radius: 10px;
     align-items: center;
     display: inline-block;
-    margin-left: 35%;
-    margin-top:-20px;
     margin-bottom: 20px;
 }
 
 a{
     color: white;
+    text-transform:capitalize;
     text-align: center;
-    font-size: 14px;
+    font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration:none;
 }
 
+h4{
+    text-align: center;
+    text-transform:capitalize;
+    font-size: 28px;
+    margin: 0;
+    
+}
 h3{
     text-align: center;
+    text-transform:capitalize;
+    font-weight:500;
     color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 10px;
-    font-size: 16px;
+    font-size: 32px;
     font-weight: 600;
 }
 .icons{ 
@@ -122,4 +128,31 @@ h3{
 .icons2 img{
     width: 100%;
     height: 100%;
+}
+
+.facebook{
+    width:25%;
+    height:auto;
+    outline:2px solid rgb(129, 126, 126);
+}
+
+@media screen and (max-width:768px){
+    .facebook{
+        width:40%;
+    }
+}
+@media screen and (max-width:576px){
+    h3{
+        font-size:24px;
+    }
+    h3{
+        font-size:18px;
+    }
+    .banner{
+        height: 30vh;
+        background-image:url('images/news.png');
+        background-size:cover;
+        background-position: center center;
+        border-radius: 0px 0px 10px 10px;
+    }
 }
