--- a/verified.css
+++ b/verified.css
@@ -4,11 +4,21 @@
 }
 .banner{
     background-image:linear-gradient(180deg, rgba(87, 115, 134, 0.9) 0%, rgba(250, 250, 250, 0.699) 100%);
-    height: 900px;
+    height: 100vh;
     padding: 0px;
 }
 .image{
+    width:35vw;
     position: absolute;
     top: 35%;
     left: 15%;
+}
+
+@media screen and (max-width:567px){
+    .image{
+        width:50vw;
+        position: absolute;
+        top: 35%;
+        left: 15%;
+    }
 }
